# pyskein

./: .gitignore  NEWS  README.md  pyproject.toml  setup.py
.github/workflows/: wheels.yaml
doc/: .buildinfo  download.html  genindex.html  index.html  objects.inv  random.html  scripts.html  search.html  searchindex.js  skein.html  stream.html  threefish.html
doc/_sources/: download.rst.txt  random.rst.txt  scripts.txt  skein.rst.txt  stream.txt  threefish.rst.txt
doc_src/: conf.py  download.rst  index.rst
pyskein/: skein.py
pyskein/scripts/: skein-random.py  skeinrandom.py  skeinsum.py  threefish.py
skein/: __init__.py  _skeinmodule.c  _skeinmodule.h  threefish.c  threefish.h
skein/scripts/: threefish.py
tests/: benchmark.py  benchmark_parallel.py  skein512.py  test_compare_pure.py  test_skein.py
