[project]
name = "pyskein"
version = "2.0"
requires-python = ">=3.11"
readme = {file = "README.md", content-type = "text/markdown"}
license = "GPL-3.0-or-later"
license-files = ["COPYING"]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security :: Cryptography"
]
authors = [
  {name = "Hagen Fürstenau"},
  {name = "Ramsey Kant"},
]
dependencies = [
]

[project.urls]
Homepage = "https://github.com/RamseyK/pyskein"
Documentation = "https://pythonhosted.org/pyskein/"
Repository = "https://github.com/RamseyK/pyskein.git"

[dependency-groups]
dev = [
    "sphinx>=9.1.0",
]

[build-system]
requires = ["setuptools>=70.1.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
skeinrandom = "pyskein.scripts.skeinrandom:main"
skeinsum = "pyskein.scripts.skeinsum:main"
threefish = "pyskein.scripts.threefish:main"

# setuptools-specific - Code & Data to package
[tool.setuptools]

[tool.setuptools.package-dir]
# This tells setuptools to look in the 'pyskein' directory for all packages - import skein for backward compat
"" = "pyskein"

[tool.setuptools.packages.find]
# Expose 'skein' as an importable module
where = ["pyskein.skein"]
exclude = ["tests*", "docs", "build*", "dist", "__pycache__"]

[tool.setuptools.package-data]
"*" = ["*.so"]

################################
# ty config
################################

[tool.ty.rules]
call-non-callable = "ignore"
unresolved-import = "ignore"
[tool.ty.src]
exclude = [
    "*/tests/*"
]
