[project]
name = "pyskein"
version = "2.0a1"
description = "PySkein is a Python native extension implementation the Skein hash algorithm. Skein was one of the five finalists of the NIST SHA-3 Competition."
requires-python = ">=3.11"
readme = {file = "README.md", content-type = "text/markdown"}
license = "GPL-3.0-or-later"
license-files = ["COPYING"]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security :: Cryptography"
]
authors = [
  {name = "Hagen Fürstenau"},
  {name = "Ramsey Kant"},
]

dependencies = []

[project.optional-dependencies]
dev = [
    "sphinx>=9.1.0",
]
test = ["coverage"]

[project.urls]
Homepage = "https://github.com/RamseyK/pyskein"
Documentation = "https://pythonhosted.org/pyskein/"
Repository = "https://github.com/RamseyK/pyskein.git"

[project.scripts]
skeinrandom = "skein.scripts.skeinrandom:main"
skeinsum = "skein.scripts.skeinsum:main"
threefish = "skein.scripts.threefish:main"

[build-system]
requires = ["setuptools>=70.1.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

#[tool.setuptools.package-dir]
# This tells setuptools to look in the 'pyskein' directory for all packages - import skein for backward compat
#"" = "skein"

[tool.setuptools.packages.find]
# # Expose 'skein' as an importable module
# where = ["skein"]
exclude = ["tests", "docs", "doc_src", "build*", "dist", "__pycache__"]

[tool.setuptools.package-data]
"*" = ["*.so", "*.c", "*.h"]

################################
# ty config
################################

[tool.ty.rules]
call-non-callable = "ignore"
unresolved-import = "ignore"
[tool.ty.src]
exclude = [
    "*/tests/*"
]
